syntax ="proto3";
option java_package="ma.enset.grpcclientservice.stub";

message Radar {
  int64 id=1;
  int64 maxSpeed=2;
  double longitude=3;
  double latitude=4;
}

message Violation {
  int64 id=1;
  string date=2;
  int64 radarID=3;
  int64 registrationNumber=4;
  int32 carSpeed=5;
  int64 maxSpeed=6;
  double penalty=7;
}


service RadarGrpcService {
  rpc getRadar(GetRadarRequest) returns (GetRadarResponse);
  rpc getListRadars(GetAllRadarsRequest) returns ( GetAllRadarsResponse);
  rpc saveRadar(SaveRadarRequest) returns (SaveRadarResponse);
  rpc generateViolation(SaveViolationRequest) returns (SaveViolationResponse);
}
message GetRadarRequest{
  int64 id=1;
}
message GetRadarResponse{
  Radar radar=1;
}
message GetAllRadarsRequest {}
message GetAllRadarsResponse{
  repeated  Radar radar = 1;
}
message SaveRadarRequest {
  int64 maxSpeed=1;
  double longitude=2;
  double latitude=3;
}
message SaveRadarResponse {
  Radar radar=1;
}

message SaveViolationRequest {
  string date=1;
  int64 radarID=2;
  int64 registrationNumber=3;
  int32 carSpeed=4;
  int64 maxSpeed=5;
  double penalty=6;
}
message SaveViolationResponse {
  Violation violation=1;
}